<resources>
    <string name="app_name">gyk301</string>
    <string name="fotobtn">Fotograf ve Video</string>
    <string name="sesbtn">Ses ve Kayıt</string>
    <string name="haritabtn">Haritaya Git</string>
    <string name="webbtn">Web Sayfasına Git</string>
    <string name="smsbtn">SMS gönder</string>
    <string name="aramabtn">Arama Yap</string>
    <string name="foto_cek">Fotograf Çek</string>
    <string name="video_cek">Video Çek</string>
    <string name="buton_text">İstanbula Git</string>
</resources>
